--- a/hello_django_app/templates/index.html
+++ b/hello_django_app/templates/index.html
@@ -10,7 +10,9 @@
             <div>
                 <input id="ingredient_{{ ingredient.id }}" type="checkbox"
                        name="ingredient[]"
-                       value="{{ ingredient.id }}"/>
+                       value="{{ ingredient.id }}"
+                       {% if ingredient.id in selected_ingredients %}checked{% endif %}
+                        />
                 <label for="ingredient_{{ ingredient.id }}">
                     {{ ingredient.title }}
                 </label>
